update create installer profile