@@ -300,4 +300,140 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <!-- START: Profiles to configure JPackage flags for Mac, Linux, & Windows Installers -->
+        <profile>
+            <id>mac</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <properties>
+                <jpackage.type>PKG</jpackage.type>
+                <jpackage.icon>src/main/resources/icons/ORCHESTRATOR.icns</jpackage.icon>
+                <jpackage.resourceDir>target/plugins</jpackage.resourceDir>
+            </properties>
+        </profile>
+        <profile>
+            <id>linux</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                </os>
+            </activation>
+            <properties>
+                <jpackage.type>RPM</jpackage.type>
+                <jpackage.icon>src/main/resources/icons/Orchestrator.png</jpackage.icon>
+                <jpackage.resourceDir>installer_resources/resourceDir_unix</jpackage.resourceDir>
+            </properties>
+        </profile>
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <properties>
+                <jpackage.type>MSI</jpackage.type>
+                <jpackage.icon>src/main/resources/icons/Orchestrator.ico</jpackage.icon>
+                <jpackage.resourceDir>installer_resources/resourceDir_win</jpackage.resourceDir>
+            </properties>
+        </profile>
+        <!-- END: Profiles to configure JPackage flags for Mac, Linux, & Windows Installers -->
+
+        <profile>
+            <id>createInstaller</id>
+            <properties>
+                <jpackage.version>1.6.0</jpackage.version>
+                <jpackage.app.name>Orchestrator</jpackage.app.name>
+                <jpackage.app.version>${project.version}</jpackage.app.version>
+                <jpackage.app.dest>target/dist/installer</jpackage.app.dest>
+            </properties>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.panteleyev</groupId>
+                            <artifactId>jpackage-maven-plugin</artifactId>
+                            <version>${jpackage.version}</version>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+                <plugins>
+                    <plugin>
+                        <groupId>org.openjfx</groupId>
+                        <artifactId>javafx-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>jlink</id>
+                                <phase>package</phase>
+                                <configuration>
+                                    <mainClass>dev.ikm.komet.orchestrator/dev.ikm.komet.orchestrator.KometOrchestrator</mainClass>
+                                    <stripDebug>false</stripDebug>
+                                    <compress>2</compress>
+                                    <bindServices>true</bindServices>
+                                    <noHeaderFiles>true</noHeaderFiles>
+                                    <noManPages>true</noManPages>
+                                    <ignoreSigningInformation>true</ignoreSigningInformation>
+                                    <launcher>launchOrchestrator</launcher>
+                                    <jlinkImageName>orchestratorRuntimeImage</jlinkImageName>
+                                    <jlinkVerbose>true</jlinkVerbose>
+                                    <jlinkZipName>orchestratorJlink</jlinkZipName>
+                                    <options>
+                                        <option>-Xmx8g</option>
+                                        <option>--add-opens</option>
+                                        <option>javafx.graphics/javafx.scene=org.controlsfx.controls</option>
+                                        <option>--add-exports</option>
+                                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=dev.ikm.komet.navigator</option>
+                                        <option>-Djava.util.concurrent.ForkJoinPool.common.exceptionHandler=dev.ikm.tinkar.common.alert.UncaughtExceptionAlertStreamer</option>
+<!--                                        <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>-->
+                                    </options>
+                                </configuration>
+                                <goals>
+                                    <goal>jlink</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>Installer</id>
+                                <phase>install</phase>
+                                <configuration>
+                                    <name>${jpackage.app.name}</name>
+                                    <appVersion>${jpackage.app.version}</appVersion> <!-- Requires Semantic Versioning with major version > zero -->
+                                    <destination>${jpackage.app.dest}</destination>
+<!--                                    <resourceDir>${jpackage.resourceDir}</resourceDir>-->
+                                    <type>${jpackage.type}</type>
+                                    <!--                            <icon>${jpackage.icon}</icon>-->
+                                    <vendor>IKM</vendor>
+                                    <runtimeImage>target/orchestratorRuntimeImage</runtimeImage>
+                                    <module>dev.ikm.komet.orchestrator/dev.ikm.komet.orchestrator.KometOrchestrator</module>
+                                    <javaOptions>
+                                        <option>-Xmx8g</option>
+                                        <option>--add-opens</option>
+                                        <option>javafx.graphics/javafx.scene=org.controlsfx.controls</option>
+                                        <option>--add-exports</option>
+                                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=dev.ikm.komet.navigator</option>
+                                    </javaOptions>
+                                    <!-- Windows Options - ignored by other Operating Systems -->
+                                    <winMenu>true</winMenu>
+                                </configuration>
+                                <goals>
+                                    <goal>jpackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
